v11/fixtures/ast/errors/ufcs_static_method_not_found/source.able
struct Counter {
  value: i32
}
methods Counter {
  fn next(self: Counter) -> i32 {
    self.value + 1
  }
  fn build(start: i32) -> Counter {
    Counter { value: start }
  }
}
c := Counter { value: 1 }
bad := build(c)
bad
